# orbitsInIRRLicht

./: CMakeLists.txt
res/: SimpleMan.dae
src/: main.cpp
